cmake_minimum_required(VERSION 3.25)
project(ConcorrenteTrabalho C)
set(CMAKE_CXX_STANDARD 14)
add_executable(ConcorrenteTrabalho RdxSortMPI.c RdxSortOpenMP.c main.c)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(/usr/include/x86_64-linux-gnu/mpich)
add_library(RadixSortSequencial.c RdxSortMPI.c RdxSortMPI.c RdxSortMPI.c)
